# elliptio_data_lake

./: .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  README.md  notes.md  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: tag.yml
docs/: test.txt  user_story.ipynb
sandbox/: argsys.py  etl.py  get.py  git_diff.py  query.py  save.py
sandbox/test_data/b/: b.md
src/elliptio/: __init__.py  _save_func.py  composite.py  composite_test.py  core.py  handler.py  interfaces.py  metadata.py
src/elliptio/adapters/: db.py  db.sqlite  db_test.py  fs.py  fs_test.py  id_creator.py  id_creator_test.py  tmp1.ipynb  tracker.py  tracker_test.py
src/elliptio/filetypes/: __init__.py  interface.py  local.py  s3.py
src/elliptio_data_lake/: __init__.py  _save_func.py
terraform/: .terraform.lock.hcl  db.tf  lambda.tf  lambda_func.py  lambda_role.tf  outputs.tf  parameter_store.tf  providers.tf  s3.tf  variables.tf
terraform/aws/: .gitignore  outputs.tf  variables.tf
terraform/lambda_func/: lambda_func.py
terraform/lambda_func/pymongo-4.6.0.dist-info/: RECORD
tests/: test_handler.py  test_save.py
