[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "elliptio"
authors = [
    {name = "Chrisian Gebbe", email = "4158176+cgebbe@users.noreply.github.com"},
]

# see https://stackoverflow.com/a/73600610/2135504
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

# from https://docs.astral.sh/ruff/configuration/
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "sandbox",
]


# Same as Black.
line-length = 88
indent-width = 4


[tool.ruff.lint]
select = ["ALL"]


ignore = [
    "D", # pydocstyle
    "ANN", # (type) annotations
    "T201", # allow print
    "T203", # allow pprint
    "TD", # allow simple TODOs and fixmes
    "FIX", # allow FIXMEs
    "S101", # allow asserts
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"